// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > Snapshot Tests > matches snapshot for default toggle 1`] = `
<button
  aria-pressed="false"
  class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 gap-2 bg-transparent h-10 px-3 min-w-10"
  data-state="off"
  type="button"
>
  Toggle
</button>
`;

exports[`Toggle > Snapshot Tests > matches snapshot for pressed toggle 1`] = `
<button
  aria-pressed="true"
  class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 gap-2 bg-transparent h-10 px-3 min-w-10"
  data-state="on"
  type="button"
>
  Pressed
</button>
`;
